--- a/ponkikki_leap/css/style.css
+++ b/ponkikki_leap/css/style.css
@@ -59,6 +59,15 @@ div.stat-circle{
   border-radius: 50%;
 
 }
+div.logo{
+  position: absolute;
+  left: 30px;
+  top: 30px;
+  background-image: url('../images/logo.png'); 
+  background-size: 100%;
+  width: 463px;
+  height: 105px;
+}
 
 div.carib-circle{
   position: absolute;
@@ -68,7 +77,6 @@ div.carib-circle{
   height:60px;
   width:60px;
   border: 3px solid #888;
-  display: none;
   font-size: 40px;
   line-height: 60px;
   text-align: center;
@@ -90,15 +98,13 @@ div.carib-stat{
   width:100%;
   height:40px;
   line-height: 40px;
-  top:50%;
+  top:20px;
   margin-top: -20px;
   text-align: center;
-  display: none;
 }
 
 div.next-video{
   position: absolute;
-  background-image: url("../images/next.png");
   background-repeat: no-repeat;
   background-size:cover;
   height: 100%;
