--- a/ponkikki_leap/css/style.css
+++ b/ponkikki_leap/css/style.css
@@ -12,6 +12,30 @@ body{
   font-family: "DIN-Medium-Web";
   color: #777;
 }
+div.text{
+  position: absolute;
+  width: 100%;
+  top:75%;
+  height:200px;
+  font-size:72px;
+  line-height: 80px;
+  font-family: "Kozuka-Pr6N";
+  text-align: center;
+  color:#fff;
+  text-shadow:1px 1px 2px #000;
+}
+div.returntext{
+  position: absolute;
+  width: 100%;
+  top:40px;
+  font-size:36px;
+  font-family: "Kozuka-Pr6N";
+  text-align: center;
+  color:#fff;
+  text-shadow:1px 1px 2px #000;
+  display: none;
+
+}
 div#container{
   position: absolute;
   top:0px;
